--- a/app/src/main/res/layout/activity_othello_game.xml
+++ b/app/src/main/res/layout/activity_othello_game.xml
@@ -25,6 +25,7 @@
         android:padding="8dp"
         android:textSize="40sp"
         android:text="O"
+        android:onClick="registerClick"
         />
 
     <TextView
@@ -37,6 +38,7 @@
         android:padding="8dp"
         android:textSize="40sp"
         android:text="O"
+        android:onClick="registerClick"
         />
 
     <TextView
@@ -49,6 +51,7 @@
         android:padding="8dp"
         android:textSize="40sp"
         android:text="O"
+        android:onClick="registerClick"
         />
     <TextView
         android:id="@+id/square0.3"
@@ -60,6 +63,7 @@
         android:padding="8dp"
         android:textSize="40sp"
         android:text="O"
+        android:onClick="registerClick"
         />
 
     <TextView
@@ -72,6 +76,7 @@
         android:padding="8dp"
         android:textSize="40sp"
         android:text="O"
+        android:onClick="registerClick"
         />
 
     <TextView
@@ -84,6 +89,7 @@
         android:padding="8dp"
         android:textSize="40sp"
         android:text="O"
+        android:onClick="registerClick"
         />
 
     <TextView
@@ -96,6 +102,7 @@
         android:padding="8dp"
         android:textSize="40sp"
         android:text="O"
+        android:onClick="registerClick"
         />
 
     <TextView
@@ -108,6 +115,7 @@
         android:padding="8dp"
         android:textSize="40sp"
         android:text="O"
+        android:onClick="registerClick"
         />
 
     <!--Row 2-->
@@ -121,6 +129,7 @@
         android:padding="8dp"
         android:textSize="40sp"
         android:text="O"
+        android:onClick="registerClick"
         />
 
     <TextView
@@ -133,6 +142,7 @@
         android:padding="8dp"
         android:textSize="40sp"
         android:text="O"
+        android:onClick="registerClick"
         />
 
     <TextView
@@ -145,6 +155,7 @@
         android:padding="8dp"
         android:textSize="40sp"
         android:text="O"
+        android:onClick="registerClick"
         />
     <TextView
         android:id="@+id/square1.3"
@@ -156,6 +167,7 @@
         android:padding="8dp"
         android:textSize="40sp"
         android:text="O"
+        android:onClick="registerClick"
         />
 
     <TextView
@@ -168,6 +180,7 @@
         android:padding="8dp"
         android:textSize="40sp"
         android:text="O"
+        android:onClick="registerClick"
         />
 
     <TextView
@@ -180,6 +193,7 @@
         android:padding="8dp"
         android:textSize="40sp"
         android:text="O"
+        android:onClick="registerClick"
         />
 
     <TextView
@@ -192,6 +206,7 @@
         android:padding="8dp"
         android:textSize="40sp"
         android:text="O"
+        android:onClick="registerClick"
         />
 
     <TextView
@@ -204,6 +219,7 @@
         android:padding="8dp"
         android:textSize="40sp"
         android:text="O"
+        android:onClick="registerClick"
         />
 
     <!--Row 3-->
@@ -217,6 +233,7 @@
         android:padding="8dp"
         android:textSize="40sp"
         android:text="O"
+        android:onClick="registerClick"
         />
 
     <TextView
@@ -229,6 +246,7 @@
         android:padding="8dp"
         android:textSize="40sp"
         android:text="O"
+        android:onClick="registerClick"
         />
 
     <TextView
@@ -241,6 +259,7 @@
         android:padding="8dp"
         android:textSize="40sp"
         android:text="O"
+        android:onClick="registerClick"
         />
     <TextView
         android:id="@+id/square2.3"
@@ -252,6 +271,7 @@
         android:padding="8dp"
         android:textSize="40sp"
         android:text="O"
+        android:onClick="registerClick"
         />
 
     <TextView
@@ -264,6 +284,7 @@
         android:padding="8dp"
         android:textSize="40sp"
         android:text="O"
+        android:onClick="registerClick"
         />
 
     <TextView
@@ -276,6 +297,7 @@
         android:padding="8dp"
         android:textSize="40sp"
         android:text="O"
+        android:onClick="registerClick"
         />
 
     <TextView
@@ -288,6 +310,7 @@
         android:padding="8dp"
         android:textSize="40sp"
         android:text="O"
+        android:onClick="registerClick"
         />
 
     <TextView
@@ -300,6 +323,7 @@
         android:padding="8dp"
         android:textSize="40sp"
         android:text="O"
+        android:onClick="registerClick"
         />
 
     <!--Row 4-->
@@ -313,6 +337,7 @@
         android:padding="8dp"
         android:textSize="40sp"
         android:text="O"
+        android:onClick="registerClick"
         />
 
     <TextView
@@ -325,6 +350,7 @@
         android:padding="8dp"
         android:textSize="40sp"
         android:text="O"
+        android:onClick="registerClick"
         />
 
     <TextView
@@ -337,6 +363,7 @@
         android:padding="8dp"
         android:textSize="40sp"
         android:text="O"
+        android:onClick="registerClick"
         />
     <TextView
         android:id="@+id/square3.3"
@@ -348,6 +375,7 @@
         android:padding="8dp"
         android:textSize="40sp"
         android:text="O"
+        android:onClick="registerClick"
         />
 
     <TextView
@@ -360,6 +388,7 @@
         android:padding="8dp"
         android:textSize="40sp"
         android:text="O"
+        android:onClick="registerClick"
         />
 
     <TextView
@@ -372,6 +401,7 @@
         android:padding="8dp"
         android:textSize="40sp"
         android:text="O"
+        android:onClick="registerClick"
         />
 
     <TextView
@@ -384,6 +414,7 @@
         android:padding="8dp"
         android:textSize="40sp"
         android:text="O"
+        android:onClick="registerClick"
         />
 
     <TextView
@@ -396,6 +427,7 @@
         android:padding="8dp"
         android:textSize="40sp"
         android:text="O"
+        android:onClick="registerClick"
         />
 
     <!--Row 5-->
@@ -409,6 +441,7 @@
         android:padding="8dp"
         android:textSize="40sp"
         android:text="O"
+        android:onClick="registerClick"
         />
 
     <TextView
@@ -421,6 +454,7 @@
         android:padding="8dp"
         android:textSize="40sp"
         android:text="O"
+        android:onClick="registerClick"
         />
 
     <TextView
@@ -433,6 +467,7 @@
         android:padding="8dp"
         android:textSize="40sp"
         android:text="O"
+        android:onClick="registerClick"
         />
     <TextView
         android:id="@+id/square4.3"
@@ -444,6 +479,7 @@
         android:padding="8dp"
         android:textSize="40sp"
         android:text="O"
+        android:onClick="registerClick"
         />
 
     <TextView
@@ -456,6 +492,7 @@
         android:padding="8dp"
         android:textSize="40sp"
         android:text="O"
+        android:onClick="registerClick"
         />
 
     <TextView
@@ -468,6 +505,7 @@
         android:padding="8dp"
         android:textSize="40sp"
         android:text="O"
+        android:onClick="registerClick"
         />
 
     <TextView
@@ -480,6 +518,7 @@
         android:padding="8dp"
         android:textSize="40sp"
         android:text="O"
+        android:onClick="registerClick"
         />
 
     <TextView
@@ -492,6 +531,7 @@
         android:padding="8dp"
         android:textSize="40sp"
         android:text="O"
+        android:onClick="registerClick"
         />
 
     <!--Row 6-->
@@ -505,6 +545,7 @@
         android:padding="8dp"
         android:textSize="40sp"
         android:text="O"
+        android:onClick="registerClick"
         />
 
     <TextView
@@ -517,6 +558,7 @@
         android:padding="8dp"
         android:textSize="40sp"
         android:text="O"
+        android:onClick="registerClick"
         />
 
     <TextView
@@ -529,6 +571,7 @@
         android:padding="8dp"
         android:textSize="40sp"
         android:text="O"
+        android:onClick="registerClick"
         />
     <TextView
         android:id="@+id/square5.3"
@@ -540,6 +583,7 @@
         android:padding="8dp"
         android:textSize="40sp"
         android:text="O"
+        android:onClick="registerClick"
         />
 
     <TextView
@@ -552,6 +596,7 @@
         android:padding="8dp"
         android:textSize="40sp"
         android:text="O"
+        android:onClick="registerClick"
         />
 
     <TextView
@@ -564,6 +609,7 @@
         android:padding="8dp"
         android:textSize="40sp"
         android:text="O"
+        android:onClick="registerClick"
         />
 
     <TextView
@@ -576,6 +622,7 @@
         android:padding="8dp"
         android:textSize="40sp"
         android:text="O"
+        android:onClick="registerClick"
         />
 
     <TextView
@@ -588,6 +635,7 @@
         android:padding="8dp"
         android:textSize="40sp"
         android:text="O"
+        android:onClick="registerClick"
         />
 
     <!--Row 7-->
@@ -601,6 +649,7 @@
         android:padding="8dp"
         android:textSize="40sp"
         android:text="O"
+        android:onClick="registerClick"
         />
 
     <TextView
@@ -613,6 +662,7 @@
         android:padding="8dp"
         android:textSize="40sp"
         android:text="O"
+        android:onClick="registerClick"
         />
 
     <TextView
@@ -625,6 +675,7 @@
         android:padding="8dp"
         android:textSize="40sp"
         android:text="O"
+        android:onClick="registerClick"
         />
     <TextView
         android:id="@+id/square6.3"
@@ -636,6 +687,7 @@
         android:padding="8dp"
         android:textSize="40sp"
         android:text="O"
+        android:onClick="registerClick"
         />
 
     <TextView
@@ -648,6 +700,7 @@
         android:padding="8dp"
         android:textSize="40sp"
         android:text="O"
+        android:onClick="registerClick"
         />
 
     <TextView
@@ -660,6 +713,7 @@
         android:padding="8dp"
         android:textSize="40sp"
         android:text="O"
+        android:onClick="registerClick"
         />
 
     <TextView
@@ -672,6 +726,7 @@
         android:padding="8dp"
         android:textSize="40sp"
         android:text="O"
+        android:onClick="registerClick"
         />
 
     <TextView
@@ -684,6 +739,7 @@
         android:padding="8dp"
         android:textSize="40sp"
         android:text="O"
+        android:onClick="registerClick"
         />
 
     <!--Row 8-->
@@ -697,6 +753,7 @@
         android:padding="8dp"
         android:textSize="40sp"
         android:text="O"
+        android:onClick="registerClick"
         />
 
     <TextView
@@ -709,6 +766,7 @@
         android:padding="8dp"
         android:textSize="40sp"
         android:text="O"
+        android:onClick="registerClick"
         />
 
     <TextView
@@ -721,6 +779,7 @@
         android:padding="8dp"
         android:textSize="40sp"
         android:text="O"
+        android:onClick="registerClick"
         />
     <TextView
         android:id="@+id/square7.3"
@@ -732,6 +791,7 @@
         android:padding="8dp"
         android:textSize="40sp"
         android:text="O"
+        android:onClick="registerClick"
         />
 
     <TextView
@@ -744,6 +804,7 @@
         android:padding="8dp"
         android:textSize="40sp"
         android:text="O"
+        android:onClick="registerClick"
         />
 
     <TextView
@@ -756,6 +817,7 @@
         android:padding="8dp"
         android:textSize="40sp"
         android:text="O"
+        android:onClick="registerClick"
         />
 
     <TextView
@@ -768,6 +830,7 @@
         android:padding="8dp"
         android:textSize="40sp"
         android:text="O"
+        android:onClick="registerClick"
         />
 
     <TextView
@@ -780,5 +843,6 @@
         android:padding="8dp"
         android:textSize="40sp"
         android:text="O"
+        android:onClick="registerClick"
         />
 </GridLayout>
