--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,22 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="horizontal"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     android:background="#2c2c2c"
     android:weightSum="1">
 
     <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Start New Game"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:text="@string/buttonNewGame"
         android:onClick="launchNewGame"
         android:layout_gravity="center_vertical"
-        android:layout_marginLeft="75dp"
-        android:layout_marginRight="75dp"
-        android:background="#000000"
-        android:textColor="#d1d1d1"
-        android:textAlignment="center"
-        android:textSize="14dp" />
-</LinearLayout>
+        android:background="@color/black"
+        android:textColor="@color/white"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
+
+</RelativeLayout>
