--- a/app/src/main/res/layout/activity_othello_game.xml
+++ b/app/src/main/res/layout/activity_othello_game.xml
@@ -5,8 +5,12 @@
     android:layout_height="match_parent"
     android:columnWidth="40dp"
     android:numColumns="auto_fit"
-    android:verticalSpacing="10dp"
+    android:verticalSpacing="0dp"
     android:horizontalSpacing="10dp"
+    android:paddingLeft="5dp"
+    android:paddingRight="5dp"
+    android:paddingTop="5dp"
+    android:paddingBottom="5dp"
     android:stretchMode="columnWidth"
     android:gravity="center"
     />
