--- a/app/src/main/res/layout/activity_othello_game.xml
+++ b/app/src/main/res/layout/activity_othello_game.xml
@@ -8,24 +8,22 @@
 
     <GridView
         android:id="@+id/othelloGrid"
-        android:layout_weight=".8"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:columnWidth="40dp"
         android:numColumns="auto_fit"
         android:verticalSpacing="0dp"
         android:horizontalSpacing="10dp"
-        android:paddingLeft="5dp"
-        android:paddingRight="5dp"
-        android:paddingTop="5dp"
-        android:paddingBottom="5dp"
+        android:paddingLeft="3dp"
+        android:paddingRight="3dp"
+        android:paddingTop="0dp"
+        android:paddingBottom="0dp"
         android:stretchMode="columnWidth"
         android:gravity="center"
         android:background="@drawable/board_green0"
     />
 
     <LinearLayout
-        android:layout_weight=".2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"></LinearLayout>
 
