Resized game board 3

--- a/app/src/main/res/layout/activity_othello_game.xml
+++ b/app/src/main/res/layout/activity_othello_game.xml
@@ -10,12 +10,11 @@
         android:id="@+id/othelloGrid"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:columnWidth="40dp"
-        android:numColumns="auto_fit"
+        android:numColumns="8"
         android:verticalSpacing="0dp"
-        android:horizontalSpacing="10dp"
-        android:paddingLeft="3dp"
-        android:paddingRight="3dp"
+        android:horizontalSpacing="0dp"
+        android:paddingLeft="0dp"
+        android:paddingRight="0dp"
         android:paddingTop="0dp"
         android:paddingBottom="0dp"
         android:stretchMode="columnWidth"
