Adding new Marker textures and new HD board w/ alternate sizes

--- a/app/src/main/res/layout/activity_othello_game.xml
+++ b/app/src/main/res/layout/activity_othello_game.xml
@@ -19,7 +19,7 @@
         android:paddingBottom="0dp"
         android:stretchMode="columnWidth"
         android:gravity="center"
-        android:background="@drawable/board_green0"
+        android:background="@drawable/board_green_hd2_512"
     />
 
     <LinearLayout
