--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="stockColorPrimary">#3F51B5</color>
+    <color name="stockColorPrimaryDark">#303F9F</color>
+    <color name="stockColorAccent">#FF4081</color>
+
+    <color name="lavender">#E6E6FA</color>
+    <color name="darker_lavender">#a1a1af</color>
+    <color name="black">#000000</color>
+    <color name="white">#ffffff</color>
+    <color name="green">#00FF00</color>
+    <color name="darkGreen">#007F0E</color>
 </resources>
