--- a/app/src/main/res/layout/grid_space.xml
+++ b/app/src/main/res/layout/grid_space.xml
@@ -8,5 +8,10 @@
         android:id="@+id/pieceImage"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+    <ImageView
+        android:id="@+id/discAnimationImageView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        />
 
 </LinearLayout>
