--- a/app/src/main/res/drawable/dpap_btw.xml
+++ b/app/src/main/res/drawable/dpap_btw.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<animation-list xmlns:android="http://schemas.android.com/apk/res/android" android:oneshot="true">
+<animation-list xmlns:android="http://schemas.android.com/apk/res/android" android:oneshot="true" android:id="@+id/id_btw_anim">
     <item android:drawable="@drawable/disc_btw0001" android:duration="1"/>
     <item android:drawable="@drawable/disc_btw0002" android:duration="1"/>
     <item android:drawable="@drawable/disc_btw0003" android:duration="1"/>
     <item android:drawable="@drawable/disc_btw0004" android:duration="1"/>
     <item android:drawable="@drawable/disc_btw0005" android:duration="1"/>
     <item android:drawable="@drawable/disc_btw0006" android:duration="1"/>
-    <item android:drawable="@drawable/disc_btw0007" android:duration="1"/>
     <item android:drawable="@drawable/disc_btw0007" android:duration="1"/>
     <item android:drawable="@drawable/disc_btw0008" android:duration="1"/>
     <item android:drawable="@drawable/disc_btw0009" android:duration="1"/>
