--- a/app/src/main/res/drawable/dpap_wtb.xml
+++ b/app/src/main/res/drawable/dpap_wtb.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<animation-list xmlns:android="http://schemas.android.com/apk/res/android" android:oneshot="true">
+<animation-list xmlns:android="http://schemas.android.com/apk/res/android" android:oneshot="true" android:id="@+id/id_wtb_anim">
     <item android:drawable="@drawable/disc_wtb0001" android:duration="1"/>
     <item android:drawable="@drawable/disc_wtb0002" android:duration="1"/>
     <item android:drawable="@drawable/disc_wtb0003" android:duration="1"/>
@@ -8,8 +8,7 @@
     <item android:drawable="@drawable/disc_wtb0005" android:duration="1"/>
     <item android:drawable="@drawable/disc_wtb0006" android:duration="1"/>
     <item android:drawable="@drawable/disc_wtb0007" android:duration="1"/>
-    <item android:drawable="@drawable/disc_wtb0007" android:duration="1"/>
-    <item android:drawable="@drawable/disc_btw0008" android:duration="1"/>
+    <item android:drawable="@drawable/disc_wtb0008" android:duration="1"/>
     <item android:drawable="@drawable/disc_wtb0009" android:duration="1"/>
     <item android:drawable="@drawable/disc_wtb0010" android:duration="1"/>
     <item android:drawable="@drawable/disc_wtb0011" android:duration="1"/>
