--- a/app/src/main/res/layout/activity_othello_game.xml
+++ b/app/src/main/res/layout/activity_othello_game.xml
@@ -19,6 +19,8 @@
         android:stretchMode="columnWidth"
         android:gravity="center"
         android:background="@drawable/board_green_metal_512px"
-    />
+        android:layout_centerVertical="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     </RelativeLayout>
