--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
 
     <color name="lavender">#E6E6FA</color>
     <color name="darker_lavender">#a1a1af</color>
+    <color name="darkGray">#2c2c2c</color>
     <color name="black">#000000</color>
     <color name="white">#ffffff</color>
     <color name="green">#00FF00</color>
