--- a/app/src/main/res/drawable/dpap_btw.xml
+++ b/app/src/main/res/drawable/dpap_btw.xml
@@ -1,35 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <animation-list xmlns:android="http://schemas.android.com/apk/res/android" android:oneshot="true" android:id="@+id/id_btw_anim">
-    <item android:drawable="@drawable/disc_btw0001" android:duration="1"/>
-    <item android:drawable="@drawable/disc_btw0002" android:duration="1"/>
-    <item android:drawable="@drawable/disc_btw0003" android:duration="1"/>
-    <item android:drawable="@drawable/disc_btw0004" android:duration="1"/>
-    <item android:drawable="@drawable/disc_btw0005" android:duration="1"/>
-    <item android:drawable="@drawable/disc_btw0006" android:duration="1"/>
-    <item android:drawable="@drawable/disc_btw0007" android:duration="1"/>
-    <item android:drawable="@drawable/disc_btw0008" android:duration="1"/>
-    <item android:drawable="@drawable/disc_btw0009" android:duration="1"/>
-    <item android:drawable="@drawable/disc_btw0010" android:duration="1"/>
-    <item android:drawable="@drawable/disc_btw0011" android:duration="1"/>
-    <item android:drawable="@drawable/disc_btw0012" android:duration="1"/>
-    <item android:drawable="@drawable/disc_btw0013" android:duration="1"/>
-    <item android:drawable="@drawable/disc_btw0014" android:duration="1"/>
-    <item android:drawable="@drawable/disc_btw0015" android:duration="1"/>
-    <item android:drawable="@drawable/disc_btw0016" android:duration="1"/>
-    <item android:drawable="@drawable/disc_btw0017" android:duration="1"/>
-    <item android:drawable="@drawable/disc_btw0018" android:duration="1"/>
-    <item android:drawable="@drawable/disc_btw0019" android:duration="1"/>
-    <item android:drawable="@drawable/disc_btw0020" android:duration="1"/>
-    <item android:drawable="@drawable/disc_btw0021" android:duration="1"/>
-    <item android:drawable="@drawable/disc_btw0022" android:duration="1"/>
-    <item android:drawable="@drawable/disc_btw0023" android:duration="1"/>
-    <item android:drawable="@drawable/disc_btw0024" android:duration="1"/>
-    <item android:drawable="@drawable/disc_btw0025" android:duration="1"/>
-    <item android:drawable="@drawable/disc_btw0026" android:duration="1"/>
-    <item android:drawable="@drawable/disc_btw0027" android:duration="1"/>
-    <item android:drawable="@drawable/disc_btw0028" android:duration="1"/>
-    <item android:drawable="@drawable/disc_btw0029" android:duration="1"/>
-    <item android:drawable="@drawable/disc_btw0030" android:duration="1"/>
+    <item android:drawable="@drawable/i1" android:duration="30"/>
+    <item android:drawable="@drawable/i2" android:duration="30"/>
+    <item android:drawable="@drawable/i3" android:duration="30"/>
+    <item android:drawable="@drawable/i4" android:duration="30"/>
+    <item android:drawable="@drawable/i5" android:duration="30"/>
+    <item android:drawable="@drawable/i6" android:duration="30"/>
+    <item android:drawable="@drawable/i7" android:duration="30"/>
+    <item android:drawable="@drawable/i8" android:duration="30"/>
+    <item android:drawable="@drawable/i9" android:duration="30"/>
+    <item android:drawable="@drawable/i10" android:duration="30"/>
+    <item android:drawable="@drawable/i11" android:duration="30"/>
+    <item android:drawable="@drawable/i12" android:duration="30"/>
+    <item android:drawable="@drawable/i13" android:duration="30"/>
+    <item android:drawable="@drawable/i14" android:duration="30"/>
 </animation-list>
 
